--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,8 +41,8 @@ jobs:
                    username: ${{ secrets.SSH_USER }}
                    key: ${{ secrets.SSH_KEY }}
                    script: |
-                       aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.ECR_REPOSITORY }}
+                       aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin ${{ secrets.ECR_REPOSITORY }}
                        docker pull ${{ secrets.ECR_REPOSITORY }}:latest
-                       docker stop my-app || true
-                       docker rm my-app || true
+                       docker stop ai_fake_reviews_detector || true
+                       docker rm ai_fake_reviews_detector || true
                        docker run -d --name ai_fake_reviews_detector -p 5000:5000 ${{ secrets.ECR_REPOSITORY }}:latest
